# ParTI

./: .gitignore  .gitmodules  .tags  .tags_sorted_by_file  .tmp.swp  CMakeLists-backup.txt  CMakeLists.txt  Contributing.md  Develop.md  GettingStarted.md  Intro.md  LICENSE  README.md  Readme.md  Todo.md  build-sample.config  build.config.example  build.sh  new.txt  old.txt  out  out_c_m0  out_f_m0  out_m1  out_m2  run_guide_on_cori.txt  run_parti.sh  run_parti_2.sh  run_parti_3.sh  run_parti_4.sh  run_ttm_parti.sh  run_ttm_parti_1.sh  run_ttm_parti_2.sh  run_ttm_parti_3.sh  sort.c  sort.h  tags  test.sh  test.tns  test_ssttm.py  (+7 more)
docs/: Doxyfile  Makefile
examples/: CMakeLists.txt  add.c  convert_hicoo.c  cpd.c  cpd_gpu.cu  cpd_hicoo.c  cpd_hicoo_gpu.cu  dmul_eq.cu  dup_indr.cu  get-tuples.c  get_tuples.c  loadstore.c  mttkrp.c  mttkrp.cu  mttkrp_gpu.cu  mttkrp_hicoo.c  mttkrp_hicoo_reorder.c  mttkrp_reorder.c  reorder.c  sttm.c  sttm_gpu.cu  ttm.c  ttm.cu  ttm_gpu.cu
include/: ParTI.h  ParTI.hpp  SpTOL.h  clapack.h  f2c.h  sort.h  timer.h
matlab/: Makefile  README.md  Readme.md  ncols.m  nrows.m  sptAppendMatrix.c  sptAppendSizeVector.c  sptAppendVector.c  sptCast.h  sptConstantMatrix.c  sptConstantVector.c  sptCopyMatrix.c  sptCopySemiSparseTensor.c  sptCopySizeVector.c  sptCopySparseTensor.c  sptCopyVector.c  sptCpdAls.c  sptCudaCpdAls.c  sptCudaMTTKRP.c  sptCudaSparseTensorDotMulEq.c  sptCudaSparseTensorMulMatrix.c  sptDumpKruskalTensor.c  sptDumpMatrix.c  sptDumpSizeVector.c  sptDumpSparseTensor.c  sptDumpVector.c  sptFreeKruskalTensor.c  sptFreeMatrix.c  sptFreeSemiSparseTensor.c  sptFreeSizeVector.c  sptFreeSparseTensor.c  sptFreeVector.c  sptLoadSparseTensor.c  sptMTTKRP.c  sptNewKruskalTensor.c  sptNewMatrix.c  sptNewSemiSparseTensor.c  sptNewSizeVector.c  sptNewSparseTensor.c  sptNewVector.c  (+27 more)
record/: brainq_large.txt  omp.xls  random_1000_0.0001_res.txt  rank.xls  testlog.20160905.1.txt  testlog.20160906.0.txt  testlog.20160906.1.txt  testlog.20160906.2.txt  testlog.20160906.xls  testlog.20161106.0.float.csv  testlog.20161106.0.txt  testlog.20161106.1.double.csv  testlog.20161106.1.txt  testlog.29160905.0.txt  testlog.29160905.csv  testlog.29160906.0.txt  testlog.29160906.1.csv  testlog.29160906.2.csv  testlog.29160906.3.txt  testlog.29160906.4.txt  testlog.29160906.csv  testlog.29160906.xls
results/: 3D_12031_coarse_m2_r9  3D_12031_fine_m0_r9  3D_12031_fine_m1_r9  3D_12031_fine_m2_r9  3D_12031_m1_r9  3D_12031_m2_r9  3d-24_fine_m1_r9  3d-24_fine_m2_r9  get_old_parti_time_coo_ttm.py  get_parti_cpd_coo_time.py  get_parti_cpd_hicoo_time.py  get_parti_hicoo_nk.py  get_parti_mttkrp_seq_coo.py  get_parti_mttkrp_seq_hicoo.py  get_parti_renumber_coo.py  get_parti_renumber_hicoo.py  get_parti_renumer_coo.py  get_parti_renumer_hicoo.py  get_parti_time_coo.py  get_parti_time_hicoo.py  get_parti_time_hicoo_renumber.py  get_splatt_cpd_time.py  get_splatt_time.py  get_splatt_time_3d.py  get_splatt_time_4d.py
src/: argparse.cpp  base.c  cuda_device.cu  cuda_error.cu  cuda_handle.cu  cuda_memnode.cu  cuda_session.cu  cuda_timer.cu  cudawrap.cu  cudawrap.h  device.cpp  elewise.c  error.cpp  free.c  io.c  ktimer.c  locks.c  matrix.c  memnode.cpp  session.cpp  sptensor.c  timer.c  timer.cpp  timer.cu  timer_cuda.cu  vector.c
tensors/: 3D_12031.tns  3d-24.tns  3d_3_12.tns  3d_3_6.tns  3d_3_8.tns  3d_4_12.tns  3d_7.tns  3d_8.tns  3d_dense.tns  4d_3_16.tns  4d_4.tns  7d_3_21.tns  dense_3d_3.tns  dense_4d_3.tns  rand_1000_0.0001.tns
tests/: CMakeLists.txt  Makefile  add  add.c  bench_SpTOL.sh  bench_dmul.sh  bench_suppl.sh  convert  convert.c  convert_hicoo.c  cpd.c  cpd.cu  cpd_gpu.cu  cpd_hicoo.c  cpd_hicoo.cu  dist_cpd.cu  dmul  dmul.cu  dup_indr.cu  khatri-rao  khatri-rao.c  khatrio-rao.c  kronecker  kronecker.c  loadstore  loadstore.c  mttkrp  mttkrp.c  mttkrp.cu  mttkrp_dist.cu  mttkrp_dist_coarse.cu  mttkrp_dist_fine.cu  mttkrp_dist_medium.cu  mttkrp_gpu.cu  mttkrp_hicoo.c  mttkrp_hicoo.cu  mttkrp_hicoo_gpu.cu  mttkrp_hicoo_matrixtiling.c  mttkrp_hicoo_matrixtiling.cu  mttkrp_hicoo_matrixtiling_2.cu  (+56 more)
tests/backup/: mttkrp_dist.cu  mttkrp_dist_coarse.cu  mttkrp_dist_fine.cu  mttkrp_dist_medium.cu  mttkrp_hicoo_matrixtiling_2.cu  split_all.c  split_balanced.c  split_coro.c  split_idx.c  test_log_power8_m2_dmul.txt  test_log_power8_m2_mttkrp.txt  test_log_power8_m2_ttm.txt  ttm.cu  ttm_hicoo.cu  ttm_omptest.cu
tests/cori/: run_guide_on_cori.txt  slurm-11805495.out  slurm-11807404.out  submit.sl  submit_shared.sl
tests/test_CTF/: bench_ttm.cxx
tests/test_matlab/: add.m  cpd.m  dmul.m  elwise.m  hadamard.m  loadstore.m  mttkrp.m  results.txt  ttm.m
tests/test_parti/: run_parti.sh  run_parti_coo.sh  run_parti_cpd_coo.sh  run_parti_cpd_hicoo.sh  run_parti_hicoo.sh  run_parti_hicoo_seq.sh  run_parti_mttkrp_coo.sh  run_parti_mttkrp_coo_renumber.sh  run_parti_mttkrp_hicoo.sh  run_parti_mttkrp_hicoo_4D.sh  run_parti_mttkrp_hicoo_matrixtiling.sh  run_parti_mttkrp_hicoo_renumber.sh  test_ttm.py
tests/test_splatt/: run_cpd_32bit.sh  run_cpd_32bit_single.sh  run_splatt.sh  run_splatt_32bit.sh  run_splatt_32bit_float.sh  run_splatt_32bit_single.sh  run_splatt_64bit.sh  run_splatt_double.sh  run_splatt_float.sh  test_guide.txt
tests/test_tensorlab/: results.txt  test_inprod.m  test_mtkrprod.m
tests/test_tensortoolbox/: cp_als_changed.m  rand_1000_0.0001.tns  test_ttbox.m  test_ttbox_cpd.m  test_ttbox_mttkrp.m  test_ttbox_times.m  test_ttbox_ttm.m  ttbox_brainq_large_res.txt  ttbox_rand_1000_0.0001_res.txt  ttm_timing.m
timing-ttm/: 1998DARPA-m0-i11-r16-g2.txt  1998DARPA-m0-i12-r16-g1.txt  1998DARPA-m0-i13-r16-g3.txt  1998DARPA-m0-i14-r16-g3.txt  1998DARPA-m0-i14-r32-g3.txt  1998DARPA-m0-i14-r64-g3.txt  1998DARPA-m0-i14-r8-g3.txt  1998DARPA-m0-i15-s14000-r16-g2.txt  1998DARPA-m0-i15-s14000-r32-g2.txt  1998DARPA-m0-i15-s14000-r64-g2.txt  1998DARPA-m0-i15-s14000-r8-g2.txt  1998DARPA-m0-i15-s30000-r16-g1.txt  1998DARPA-m0-r16-omp.txt  1998DARPA-m0-r16-seq.txt  1998DARPA-m0-r32-omp.txt  1998DARPA-m0-r32-seq.txt  1998DARPA-m0-r64-omp.txt  1998DARPA-m0-r64-seq.txt  (+498 more)
tools/: a.tns  (+8 more)
(+1089 files in other folders)
